added min-width to message box

--- a/src/Messages.css
+++ b/src/Messages.css
@@ -4,6 +4,7 @@
   max-width:60%;
   width: fit-content;
   height:fit-content;
+  min-width: 200px;
   margin-top:10px;
   text-align: left;
   padding: 15px;
