--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@ flex:1;
 
 .BlackNavBar{
   background-color:black!important;
+  border-bottom:1px solid white;
 }
 
 .dark_input{
@@ -73,6 +74,7 @@ flex:1;
 }
 
 .footer_dark{
+  border-top:1px solid white;
   background-color: black;
 }
 
