--- a/src/Messages.css
+++ b/src/Messages.css
@@ -1,6 +1,7 @@
 .msgs{
-  background-color:lightblue;
-  border-radius:10px;
+  background: rgba(255, 255, 255, 0.6);
+  border: 3px solid rgb(0, 0, 0);
+  border-radius:10px; 
   max-width:60%;
   width: fit-content;
   height:fit-content;
@@ -23,6 +24,22 @@
   text-transform: capitalize;
 }
 
+.msgsDark{
+  background: rgba(255, 255, 255, 0.5);
+  border: 4px solid rgb(255, 255, 255);
+  border-radius:10px; 
+  max-width:60%;
+  width: fit-content;
+  height:fit-content;
+  min-width: 200px;
+  margin-top:10px;
+  text-align: left;
+  padding: 15px;
+  font-family: 'Hind Madurai', sans-serif;
+  font-weight:bold;
+  font-size: 1.1rem;
+}
+
 .senderDark{
   color:white !important;
 }
@@ -32,7 +49,7 @@
 }
 
 .user{
-  background-color: lightpink;
+  background-color: rgba(255, 179, 179, 0.5);
   margin-left:auto;
   margin-right: 10px;
 }
@@ -45,4 +62,8 @@
   text-align: right;
   margin: 0;
   color: rgb(126, 126, 126)
+}
+
+.time-stampDark {
+  color: white;
 }
