--- a/src/Messages.css
+++ b/src/Messages.css
@@ -1,48 +1,52 @@
-.msgs{
-  background-color:lightblue;
-  border-radius:10px;
-  max-width:60%;
+.msgs {
+  background-color: lightblue;
+  border-radius: 10px;
+  max-width: 60%;
   width: fit-content;
-  height:fit-content;
+  height: fit-content;
   min-width: 200px;
-  margin-top:10px;
+  margin-top: 10px;
   text-align: left;
   padding: 15px;
-  font-family: 'Hind Madurai', sans-serif;
-  font-weight:bold;
+  font-family: "Hind Madurai", sans-serif;
+  font-weight: bold;
   font-size: 1.1rem;
 }
 
-.sender{
-  font-family: 'Fjord One', serif;
+.sender {
+  font-family: "Fjord One", serif;
   font-size: 1.2rem;
   text-align: left;
-  margin-bottom:0;
-  margin-top:25px;
+  margin-bottom: 0;
+  margin-top: 25px;
   margin-left: 10px;
   text-transform: capitalize;
 }
 
-.senderDark{
-  color:white !important;
+.senderDark {
+  color: white !important;
 }
 
-.message_div{
-  margin-top:25px;
+.message_div {
+  margin-top: 25px;
 }
 
-.user{
+.user {
   background-color: lightpink;
-  margin-left:auto;
+  margin-left: auto;
   margin-right: 10px;
 }
 
-.guest{
+.guest {
   margin-left: 10px;
 }
 
-.time-stamp{
+.time-stamp {
   text-align: right;
   margin: 0;
-  color: rgb(126, 126, 126)
+  color: rgb(126, 126, 126);
+  font-size: 14px;
+  font-style: italic;
+  font-family: Montserrat;
+  letter-spacing: 0.2px;
 }
