added google auth and chatroom functionality

--- a/src/App.css
+++ b/src/App.css
@@ -1,83 +1,18 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
 }
 
-.Logo{
-  width:50px;
-  position:fixed;
-  right:70px;
-  top:25px;
+.app {
+  /* background-color: #e9e9e3; */
+  height: 100vh;
+  display: grid;
+  place-items: center;
 }
 
-::placeholder{
-  font-weight: bold;
-  color:white;
-  opacity:1;
-}
-
-.NavBar{
-  background-color:#014293;
-  width:100%;
-  border-bottom:2px solid black;
-  height:100px;
-  position:fixed;
-  top:0px;
-}
-
-input{
-  background-color: black;
-  line-height: 30px;
-  width:250px;
-}
-
-.messenger{
-  display:inline-block;
-  position:fixed;
-  top:0px;
-  left:30px;
-  font-weight: bold;
-  font-size: 40px;
-}
-
-.dark{
-position:fixed;
-top:0px;
-right:-150px;
-outline: none;
-}
-
-footer{
-  position: fixed;
-  bottom:0;
-  height:10%;
-  width:100%;
-  background-color: #014293;
-  border-top:2px solid black;
-}
-
-.input{
-margin-top:10px;
-flex:1;
-}
-
-.blackName{
-  color:white !important;
-}
-
-.BlackNavBar{
-  background-color:black!important;
-}
-
-.dark_input{
-  color:white;
-}
-
-.footer_dark{
-  background-color: black;
-}
-
-
-.iconButton{
-  top:10px;
-  left:10px;
+.app__container {
+  box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.3);
+  display: flex;
+  width: 85vw;
+  height: 90vh;
+  background-color: rgb(250, 250, 250);
 }
