--- a/src/Messages.css
+++ b/src/Messages.css
@@ -1,67 +1,71 @@
-.msgs{
+.msgs {
   background: rgba(255, 255, 255, 0.6);
   border: 3px solid rgb(0, 0, 0);
-  border-radius:10px; 
-  max-width:60%;
+  border-radius: 10px;
+  max-width: 60%;
   width: fit-content;
-  height:fit-content;
+  height: fit-content;
   min-width: 200px;
-  margin-top:10px;
+  margin-top: 10px;
   text-align: left;
   padding: 15px;
-  font-family: 'Hind Madurai', sans-serif;
-  font-weight:bold;
+  font-family: "Hind Madurai", sans-serif;
+  font-weight: bold;
   font-size: 1.1rem;
 }
 
-.sender{
-  font-family: 'Fjord One', serif;
+.sender {
+  font-family: "Fjord One", serif;
   font-size: 1.2rem;
   text-align: left;
-  margin-bottom:0;
-  margin-top:25px;
+  margin-bottom: 0;
+  margin-top: 25px;
   margin-left: 10px;
   text-transform: capitalize;
 }
 
-.msgsDark{
+.msgsDark {
   background: rgba(255, 255, 255, 0.5);
   border: 4px solid rgb(255, 255, 255);
-  border-radius:10px; 
-  max-width:60%;
+  border-radius: 10px;
+  max-width: 60%;
   width: fit-content;
-  height:fit-content;
+  height: fit-content;
   min-width: 200px;
-  margin-top:10px;
+  margin-top: 10px;
   text-align: left;
   padding: 15px;
-  font-family: 'Hind Madurai', sans-serif;
-  font-weight:bold;
+  font-family: "Hind Madurai", sans-serif;
+  font-weight: bold;
   font-size: 1.1rem;
 }
 
-.senderDark{
-  color:white !important;
+.senderDark {
+  color: white !important;
 }
 
-.message_div{
-  margin-top:25px;
+.message_div {
+  margin-top: 25px;
 }
 
-.user{
+.user {
   background-color: rgba(255, 179, 179, 0.5);
-  margin-left:auto;
+  margin-left: auto;
   margin-right: 10px;
 }
 
-.guest{
+.guest {
   margin-left: 10px;
 }
 
-.time-stamp{
+.time-stamp {
+  font-style: italic;
+  font-family: Montserrat;
+  font-size: 14px;
+  letter-spacing: 0.01rem;
   text-align: right;
   margin: 0;
-  color: rgb(126, 126, 126)
+  color: rgb(126, 126, 126);
 }
 
 .time-stampDark {
