added Read-More-Less functionality (#37)
* added Read-More-Less functionality

* updated contributors.md

--- a/src/Messages.css
+++ b/src/Messages.css
@@ -48,6 +48,11 @@
   margin-top: 25px;
 }
 
+.read-or-hide {
+  color: rgb(87, 85, 85);
+  cursor: pointer;
+}
+
 .user {
   background-color: rgba(255, 179, 179, 0.5);
   margin-left: auto;
