--- a/src/Messages.css
+++ b/src/Messages.css
@@ -81,6 +81,11 @@
 /*NEW*/
 
 .msgs {
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
   background-color: lightblue;
   border-radius: 10px;
   max-width: 60%;
