--- a/src/Messages.css
+++ b/src/Messages.css
@@ -100,6 +100,10 @@
   font-size: 1.1rem; 
 }
 
+.msgs:hover {
+  box-shadow: 0px 0px 20px rgb(245, 125, 143);
+}
+
 .sender {
   font-family: "Fjord One", serif;
   font-size: 1.2rem;
@@ -122,6 +126,10 @@
   background-color: lightpink;
   margin-left: auto;
   margin-right: 10px;
+}
+
+.user:hover {
+  box-shadow: 0px 0px 20px rgb(67, 188, 228);
 }
 
 .guest {
