--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .App {
   text-align: center;
 }
-
+body {
+  margin: 0;
+  height: 100%;
+  overflow-x: hidden;
+}
 body {
   background-attachment: fixed;
 }
@@ -36,7 +40,7 @@ body {
   justify-content: space-between;
   top: 0px;
 }
-
+/* rgb(0, 50, 77) */
 .NavBar div.flex1 {
   display: flex;
   width: 50vw;
@@ -71,15 +75,17 @@ input {
 footer {
   position: fixed;
   bottom: 0;
-  height: 10%;
+  padding-bottom: 5px;
+  height: 11.5%;
   width: 100%;
-  /* background-color: #014293; */
-  background-color: rgb(0, 50, 77);
-  border-top: 2px solid black;
-}
 
+  /* background-color: #014293; */
+  /* background-color: rgb(0, 50, 77); */
+  /* border-top: 2px solid black; */
+}
 .input {
-  margin-top: 10px;
+  margin-top: 7px;
+  margin-bottom: 10px;
   flex: 1;
 }
 
@@ -88,10 +94,60 @@ footer {
 }
 
 .footer_dark {
-  background-color: black;
+  color: black;
 }
 
 .iconButton {
   top: 15px;
   left: 10px;
 }
+.content__footer {
+  margin: 0 auto;
+  padding-top: 30px;
+}
+.sendNewMessage {
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 8px;
+}
+.sendNewMessage button {
+  width: 36px;
+  height: 36px;
+  background-color: #ecefff;
+  border: none;
+  box-shadow: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 16px;
+  color: rgb(0, 50, 77);
+  padding: 0;
+  border-radius: 5px;
+  line-height: 36px;
+  transition: all 0.3s cubic-bezier(0.88, 0.19, 0.37, 1.11);
+}
+.sendNewMessage > .darkButton {
+  color: black !important;
+}
+.sendNewMessage > .darkButtonSend {
+  background-color: black !important;
+}
+.sendNewMessage button:hover {
+  transform: scale(1.2);
+}
+.sendNewMessage button i {
+  display: block;
+}
+.sendNewMessage input {
+  flex-grow: 1;
+  padding: 0 15px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+#sendMsgBtn {
+  background-color: rgb(0, 50, 77);
+  color: #fff;
+}
+
