removed sending button

--- a/src/components/Chatroom.css
+++ b/src/components/Chatroom.css
@@ -93,6 +93,7 @@
     color: white;
     padding: 10px;
     border-radius: 50%;
+    display: none;
   }
   
   .chatroom__footer > form > input:focus {
