Add loading component

--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,15 @@ input {
 .dark_input {
   background-color: rgb(140, 140, 140);
 }
+.loading{
+  position:fixed;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
 
 @media(max-width: 350px){
   .Logo{
