--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ input{
 footer{
   position: fixed;
   bottom:0;
-  height:10%;
+  height: auto;
   width:100%;
   background-color: #014293;
   border-top:2px solid black;
@@ -59,7 +59,16 @@ footer{
 margin-top:10px;
 flex:1;
 }
-
+.emoji-icon {
+  border: none;
+  width: 50px;
+  height: auto;
+  padding: 0;
+  margin-bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .blackName{
   color:white !important;
 }
