--- a/src/App.css
+++ b/src/App.css
@@ -1,191 +1,17 @@
-.App {
-  text-align: center;
-}
-body {
+* {
   margin: 0;
-  height: 100%;
-  overflow-x: hidden;
-}
-body {
-  background-attachment: fixed;
 }
 
-.messenger {
-  background: -webkit-linear-gradient(
-    45deg,
-    rgba(255, 166, 10, 1) 24%,
-    rgba(255, 0, 224, 1) 100%
-  );
-  align-self: center;    
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+.app {
+  height: 100vh;
+  display: grid;
+  place-items: center;
 }
 
-.blackName {
-  color: black;
-}
-
-::placeholder {
-  font-weight: bold;
-  opacity: 1;
-  color: black;
-}
-
-.NavBar {
-  background-color: rgb(0, 50, 77);
-  width: 100%;
-  border-bottom: 2px solid black;
-  height: 100px;
-  position: fixed;
+.app__container {
+  box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.3);
   display: flex;
-  justify-content: space-between;
-  top: 0px;
+  width: 85vw;
+  height: 90vh;
+  background-color: rgb(250, 250, 250);
 }
-/* rgb(0, 50, 77) */
-.NavBar div.flex1 {
-  display: flex;
-  width: 50vw;
-  margin: 1%;
-}
-
-.NavBar div.flex2 {
-  align-self: center;
-  margin: 1%;
-}
-
-input {
-  line-height: 25px;
-  min-width: 500px;
-  width: 50vw;
-  border-radius: 30px;
-  outline-width: 0;
-  padding: 10px;
-  border: 1px solid white;
-}
-
-.dark_input {
-  background-color: rgb(140, 140, 140);
-}
-.loading{
-  position:fixed;
-  z-index: 1;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-}
-
-@media(max-width: 350px){
-  .Logo{
-    width: auto;
-    height: 50px;
-    align-self: center;
-  }
-}
-
-.messenger {
-    font-weight: bold;
-    font-size: 40px;
-    margin: 0.25em;
-}
-
-@media(min-width: 500px){
-  .messenger {
-    font-size: 40px;
-  }
-}
-
-@media(max-width: 500px) {
-  .messenger{
-    font-size: 35px;    
-  }
-}
-
-@media(max-width: 350px) {
-  .messenger{
-    font-size: 20px;    
-  }
-}
-footer {
-  position: fixed;
-  bottom: 0;
-  padding-bottom: 5px;
-  height: 11.5%;
-  width: 100%;
-
-  /* background-color: #014293; */
-  /* background-color: rgb(0, 50, 77); */
-  /* border-top: 2px solid black; */
-}
-.input {
-  margin-top: 7px;
-  margin-bottom: 10px;
-  flex: 1;
-}
-
-.BlackNavBar {
-  background-color: black !important;
-  border-bottom: 1px solid white;
-}
-
-.footer_dark {
-  color: black;
-  background-color: black;
-  border-top: 1px solid white;
-}
-
-.iconButton {
-  top: 15px;
-  left: 10px;
-}
-.content__footer {
-  margin: 0 auto;
-  padding-top: 30px;
-}
-.sendNewMessage {
-  background-color: #fff;
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  border-radius: 8px;
-}
-.sendNewMessage button {
-  width: 36px;
-  height: 36px;
-  background-color: #ecefff;
-  border: none;
-  box-shadow: none;
-  outline: none;
-  cursor: pointer;
-  font-size: 16px;
-  color: rgb(0, 50, 77);
-  padding: 0;
-  border-radius: 5px;
-  line-height: 36px;
-  transition: all 0.3s cubic-bezier(0.88, 0.19, 0.37, 1.11);
-}
-.sendNewMessage > .darkButton {
-  color: black !important;
-}
-.sendNewMessage > .darkButtonSend {
-  background-color: black !important;
-}
-.sendNewMessage button:hover {
-  transform: scale(1.2);
-}
-.sendNewMessage button i {
-  display: block;
-}
-.sendNewMessage input {
-  flex-grow: 1;
-  padding: 0 15px;
-  background-color: transparent;
-  border: none;
-  outline: none;
-}
-#sendMsgBtn {
-  background-color: rgb(0, 50, 77);
-  color: #fff;
-}
-
