--- a/src/Messages.css
+++ b/src/Messages.css
@@ -95,7 +95,7 @@
   margin-top: 10px;
   text-align: left;
   padding: 15px;
-  font-family: "Hind Madurai", sans-serif;
+  font-family:'Times New Roman', Times, serif;
   font-weight: bold;
   font-size: 1.1rem; 
   word-wrap: break-word;
