--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@ body {
     45deg,
     rgba(255, 166, 10, 1) 24%,
     rgba(255, 0, 224, 1) 100%
+   background-image: url(https://user-images.githubusercontent.com/72564975/112663760-32405600-8e7f-11eb-8131-d8c8accf605c.jpg);
+
   );
   align-self: center;
   -webkit-background-clip: text;
@@ -65,6 +67,7 @@ input {
 
 .dark_input {
   background-color: rgb(140, 140, 140);
+  background-image: url(https://user-images.githubusercontent.com/72564975/112664271-cad6d600-8e7f-11eb-93c1-7c59b3329c49.jpg);
 }
 .loading {
   position: fixed;
