--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-image:url("https://i.redd.it/qwd83nc4xxf41.jpg");
+  background-image:url("https://user-images.githubusercontent.com/72564975/112663760-32405600-8e7f-11eb-8131-d8c8accf605c.jpg");
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -9,7 +9,7 @@ body {
 }
 
 body.dark-bg {
-  background-image: url("https://i.pinimg.com/originals/85/ec/df/85ecdf1c3611ecc9b7fa85282d9526e0.jpg");
+  background-image: url("https://user-images.githubusercontent.com/72564975/112664271-cad6d600-8e7f-11eb-93c1-7c59b3329c49.jpg");
 }
 
 code {
