--- a/src/switcher.css
+++ b/src/switcher.css
@@ -4,9 +4,38 @@
 html {
   height: 100%;
 }
+
+#blackbtn{
+background-color: blanchedalmond;
+border-radius: 50%;
+height: 50px;
+width: 50px;
+display: inline;
+box-shadow: inset 0 5px 5px rgb(24, 24, 20), inset 0 -2px 2px rgba(22, 6, 6, 0.18);
+}
 #themebtn{
-  background-color: tomato;
- position: relative;
+  display: inline-block;
+    text-decoration: none;
+  font-size: small;
+font-style:bold;
+    color:black;
+    width: 90px;
+    height: 90px;
+  
+    border-radius: 50%;
+    text-align: center;
+    vertical-align: middle;
+    overflow: hidden;
+    background-image: -webkit-linear-gradient(45deg, #709dff 0%, #91fdb7 100%);    
+    background-image: linear-gradient(45deg, #709dff 0%, #91fdb7 100%);
+    transition: .4s;
+ 
+}
+#themebtn:hover{
+  
+  -webkit-transform: rotateY(360deg);
+  -ms-transform: rotateY(360deg);
+  transform: rotateY(360deg);
 }
 .dropdowndiv{
 position: relative;
@@ -20,24 +49,34 @@ body {
 #theme-options {
   width: auto;
   
+  position: relative;
   height: auto;
-  margin: 0 auto;
-  text-align: right;
-  padding: 20px 0;
-  background-color: transparent;
+
+  
+  padding: 2px 0;
+  background-color:transparent;
   opacity: 70%;
   visibility: hidden;
+border-color: burlywood;
+border-width: 12px;
+border-radius: 12px;
 }
 #theme-options div {
-  width: 20px;
-  height: 20px;
+  width: 40px;
+  height: 40px;
   border-radius: 4px;
   cursor: grab;
   margin: 2px 10px;
-  border: 2px solid black;
+  border: 4px solid black;
   display: inline-block;
-  
+  box-shadow: inset 0 5px 5px rgb(20, 20, 19), inset 0 -2px 2px rgba(22, 6, 6, 0.18);
+  transition: .2s;
+
 }
+#theme-options div:hover{
+  box-shadow: none;
+}
+
 #theme-options  #theme-pink {
 
   background-color:rgb(202, 39, 66);
