--- a/src/switcher.css
+++ b/src/switcher.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
 }
@@ -16,12 +17,13 @@ box-shadow: inset 0 5px 5px rgb(24, 24, 20), inset 0 -2px 2px rgba(22, 6, 6, 0.1
 #themebtn{
   display: inline-block;
     text-decoration: none;
-  font-size: small;
+  font-size: 12px;
 font-style:bold;
+font-family:'Gill Sans';
     color:black;
     width: 90px;
     height: 90px;
-  
+
     border-radius: 50%;
     text-align: center;
     vertical-align: middle;
@@ -58,11 +60,13 @@ body {
   opacity: 70%;
   visibility: hidden;
 border-color: burlywood;
+
 border-width: 12px;
 border-radius: 12px;
 }
 #theme-options div {
   width: 40px;
+
   height: 40px;
   border-radius: 4px;
   cursor: grab;
@@ -77,9 +81,11 @@ border-radius: 12px;
   box-shadow: none;
 }
 
+
+
 #theme-options  #theme-pink {
 
-  background-color:rgb(202, 39, 66);
+  background-color: #ff0040;
 
 }
 #theme-options  #theme-orange {
@@ -94,19 +100,44 @@ border-radius: 12px;
 #theme-options  #theme-white {
   background-color: white;
 }
+@media screen and (max-width: 700px) {
+ #theme-btn{
+   width:30px;
+ }
+ #theme-options {
+  position: absolute;
+
+  bottom: 5px;
+  right: 35%;
+  height: 30px;
+   
+   width:30px;
+ }
+ 
+  #theme-options #theme-pink,
+  #theme-options #theme-orange,
+  #theme-options #theme-purple,
+  #theme-options #theme-green,
+  #theme-options #theme-white
+   {
+      width: 100%;
+      
+  }
+  #blackbtn{height: 30px;width: 30px;}
+}
 
 .App.theme-pink {
   background-color: brown;
 }
 .App.theme-pink .scroll {
-  background-color:pink;
+  background-color: #ff0040;
   
 }
 .App.theme-purple {
   background-color: brown;
 }
 .App.theme-purple .scroll {
-  background-color:violet;
+  background-color:	 #4d004d;
 }
 .App.theme-white{
   background-color:white;
@@ -124,5 +155,5 @@ border-radius: 12px;
   background-color: brown;
 }
 .App.theme-green .scroll {
-  background-color:green;
+  background-color:	 #00b300;
 }
