--- a/src/switcher.css
+++ b/src/switcher.css
@@ -130,14 +130,18 @@ border-radius: 12px;
   background-color: brown;
 }
 .App.theme-pink .scroll {
-  background-color: #ff0040;
+  color: #fff;
+  background: repeating-linear-gradient(-70deg, #ed8bad 0, #ed8bad 25%, #eea1bb 0, #eea1bb 40%) 0 / 45px 10px;
   
 }
 .App.theme-purple {
   background-color: brown;
 }
 .App.theme-purple .scroll {
-  background-color:	 #4d004d;
+  background: radial-gradient(1.5em 6.28571em at 1.95em, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0.25) 55%, rgba(255, 255, 255, 0) 55%) 0 0, radial-gradient(1.5em 6.28571em at -0.45em, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0.25) 55%, rgba(255, 255, 255, 0) 55%) 1.5em 5.5em, radial-gradient(2.3em 4.57143em at 2.99em, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0.3) 55%, rgba(255, 255, 255, 0) 55%) 0 0, radial-gradient(2.3em 4.57143em at -0.69em, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0.3) 55%, rgba(255, 255, 255, 0) 55%) 2.3em 4em, radial-gradient(3.5em 6.28571em at 4.55em, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0.25) 55%, rgba(255, 255, 255, 0) 55%) 0 0, radial-gradient(3.5em 6.28571em at -1.05em, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0.25) 55%, rgba(255, 255, 255, 0) 55%) 3.5em 5.5em, radial-gradient(#15ffa5, #00ced1);
+  background-color: mediumspringgreen;
+  background-size: 1.5em 11em, 1.5em 11em, 2.3em 8em, 2.3em 8em, 3.5em 11em, 3.5em 11em, 100% 100%;
+  background-repeat: repeat;
 }
 .App.theme-white{
   background-color:white;
@@ -149,11 +153,39 @@ border-radius: 12px;
   background-color: brown;
 }
 .App.theme-orange .scroll {
-  background-color:orange;
+  background-color: #2A56A6;
+  background-image: 
+    repeating-linear-gradient(45deg, rgba(0,0,0,0.2) 2px, transparent 2.5px),
+    repeating-linear-gradient(-45deg, rgba(0,0,0,0.2) 2px, transparent 2.5px),
+    linear-gradient(to bottom, rgba(255,255,255,0.5) 1px, transparent 0), 
+    linear-gradient(to bottom, rgba(255,255,255,0.5) 1px, transparent 0), 
+    linear-gradient(to right, rgba(255,255,255,0.5) 1px, transparent 0), 
+    linear-gradient(to right, rgba(255,255,255,0.5) 1px, transparent 0), 
+    linear-gradient(to right, #1c4489 40px, transparent 0), 
+    linear-gradient(to right, rgba(255,255,255,0.5) 2px, transparent 0);
+  background-size:
+    auto,
+    auto,
+    50px 50px, 
+    50px 50px, 
+    50px 50px, 
+    50px 50px, 
+    80px 80px, 
+    50px 50px;
+  background-position:
+    0 0, 
+    0 0,
+    0 0, 
+    0 10px, 
+    0 0, 
+    10px 0, 
+    0 10px, 
+    5px 0;
 }
 .App.theme-green {
   background-color: brown;
 }
 .App.theme-green .scroll {
-  background-color:	 #00b300;
+  color: #fff;
+  background: repeating-linear-gradient(90deg, #e49724 0, #9ccc56 20%, #a82716 0, #e28418 70%) 0 / 20px 20px;
 }
