hamburger navbar | about us, home | new UI

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
     rgba(255, 166, 10, 1) 24%,
     rgba(255, 0, 224, 1) 100%
   );
-  align-self: center;
+
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -25,38 +25,175 @@ body {
   color: black;
 }
 
-::placeholder {
-  font-weight: bold;
-  opacity: 1;
-  color: black;
+/*====================== new navbar ==========================*/
+
+:root {
+  --background1: rgb(19, 31, 49);
+  --background2: rgba(13, 18, 26, 0.94);
+  --backgroundforapp: rgb(18, 20, 22);
+  --textcolour: rgb(237, 229, 229);
+  --secondarycolor: #72e9bb;
+  --navbarcolor: #f5b921;
+  --navbarhovercolor: #ffdd41;
 }
 
-.NavBar {
-  background-color: rgb(0, 50, 77);
+.navbar {
+  background-color: rgb(12, 17, 24);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 20;
+  box-shadow: 0 4px 8px 0 rgba(253, 251, 251, 0.2),
+    0 6px 10px 0 rgba(196, 168, 168, 0.844);
+}
+
+.nav-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  border-bottom: 2px solid black;
-  height: 100px;
-  position: fixed;
-  display: flex;
-  justify-content: space-between;
-  top: 0px;
-}
-/* rgb(0, 50, 77) */
-.NavBar div.flex1 {
-  display: flex;
-  width: 50vw;
-  margin: 1%;
+  height: 80px;
+  max-width: 1500px;
 }
 
-.NavBar div.flex2 {
-  align-self: center;
-  margin: 1%;
+.nav-logo {
+  color: var(--secondarycolor);
+  align-items: center;
+  margin-left: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 2rem;
+  flex-grow: 1;
 }
+
+a {
+  text-decoration: none;
+}
+
+.nav-menu {
+  display: flex;
+  list-style: none;
+  text-align: center;
+  margin-right: 2rem;
+}
+
+.nav-links {
+  color: #fff;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  height: 100%;
+  border-bottom: 3px solid transparent;
+}
+.fa-code {
+  margin-left: 1rem;
+}
+
+.nav-item {
+  line-height: 40px;
+  margin-right: 1rem;
+  outline: 2px solid var(--secondarycolor);
+}
+
+.toggle-nav {
+  outline: none;
+}
+.nav-item:after {
+  content: "";
+  display: block;
+  height: 3px;
+  width: 0;
+  background: transparent;
+  transition: width 0.7s ease, background-color 0.5s ease;
+}
+
+.nav-item:hover:after {
+  width: 100%;
+  background: var(--secondarycolor);
+}
+
+.nav-item a:active {
+  color: var(--secondarycolor);
+  border: 1px solid var(--secondarycolor);
+}
+
+.nav-icon {
+  display: none;
+}
+
+@media screen and (max-width: 960px) {
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-top: 1pxsolid #fff;
+    position: absolute;
+    top: 60px;
+    left: -110%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .nav-menu.active {
+    background: var(--background2);
+    left: 0px;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+  .nav-item a:active {
+    border: none;
+  }
+  .nav-item {
+    color: var(--secondarycolor);
+    border: none;
+    margin: 25px 0px;
+    outline: none;
+  }
+
+  .nav-item:hover {
+    transform: scale(1.2);
+  }
+
+  .nav-item:hover:after {
+    width: 100%;
+    background: var(--secondarycolor);
+  }
+
+  .toggle-nav:hover:after {
+    background: none;
+  }
+
+  .nav-links {
+    padding: 1.5rem;
+    margin-left: -70px;
+    border: none;
+  }
+
+  .nav-icon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+    color: rgb(252, 249, 249);
+  }
+
+  .toggle-button {
+    margin-right: 70px !important;
+  }
+}
+
+/* ================== end of new navbar ==================== */
 
 input {
   line-height: 25px;
-  min-width: 500px;
-  width: 50vw;
+  width: 98%;
   border-radius: 30px;
   outline-width: 0;
   padding: 10px;
@@ -76,7 +213,7 @@ input {
   margin: auto;
 }
 
-@media (max-width: 350px) {
+@media (max-width: 450px) {
   .Logo {
     width: auto;
     height: 50px;
@@ -118,9 +255,21 @@ footer {
   /* background-color: rgb(0, 50, 77); */
   /* border-top: 2px solid black; */
 }
+
+@media (max-width: 450px) {
+  footer {
+    width: 99.6%;
+    margin: 0px 1px;
+  }
+  .content__footer {
+    padding-right: 16px;
+    padding-left: 3px;
+  }
+}
+
 .input {
   margin-top: 7px;
-  margin-bottom: 10px;
+  margin-bottom: 7px;
   flex: 1;
 }
 
@@ -140,16 +289,19 @@ footer {
   left: 10px;
 }
 .content__footer {
-  margin: 0 auto;
-  padding-top: 7px;
+  margin: 0;
+  padding-top: 10px;
 }
 .sendNewMessage {
   background-color: #fff;
+  width: 98.5%;
+  max-width: 1400px;
   display: flex;
   justify-content: space-between;
   padding: 10px;
   border-radius: 8px;
 }
+
 .sendNewMessage button {
   width: 36px;
   height: 36px;
@@ -165,6 +317,19 @@ footer {
   line-height: 36px;
   transition: all 0.3s cubic-bezier(0.88, 0.19, 0.37, 1.11);
 }
+
+@media (max-width: 864px) {
+  .sendNewMessage {
+    width: 97%;
+  }
+}
+
+/*@media (max-width: 450px) {
+  .sendNewMessage {
+    width: 90%;
+  }
+}*/
+
 .sendNewMessage > .darkButton {
   color: black !important;
 }
@@ -187,4 +352,11 @@ footer {
 #sendMsgBtn {
   background-color: rgb(0, 50, 77);
   color: #fff;
+}
+
+@media (max-width: 700px) {
+  .sendNewMessage {
+    width: 98.5%;
+    max-width: 700px;
+  }
 }
