--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,6 @@ body {
     rgba(255, 166, 10, 1) 24%,
     rgba(255, 0, 224, 1) 100%
   );
-  
   align-self: center;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -39,7 +38,7 @@ body {
 }
 
 .navbar {
-  background-color: rgb(12, 17, 24);
+  background-color: rgb(9, 13, 19);
   height: 80px;
   display: flex;
   justify-content: center;
@@ -108,7 +107,7 @@ a {
   height: 3px;
   width: 0;
   background: transparent;
-  transition: width 0.7s ease, background-color 0.5s ease;
+  transition: width 0.7s ease, black 0.5s ease;
 }
 
 .nav-item:hover:after {
@@ -134,12 +133,12 @@ a {
     position: absolute;
     top: 60px;
     left: -110%;
-    opacity: 1;
+    opacity: 0;
     transition: all 0.5s ease;
   }
 
   .nav-menu.active {
-    background: var(--background2);
+    background: rgb(22, 21, 21);
     left: 0px;
     opacity: 1;
     transition: all 0.5s ease;
