--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
 .messenger {
   background: -webkit-linear-gradient(
     45deg,
-    rgba(255, 166, 10, 1) 24%,
+    rgb(133, 29, 186) 15%,
     rgba(255, 0, 224, 1) 100%
   );
   align-self: center;
@@ -372,5 +372,18 @@ footer {
   .sendNewMessage {
     width: 98.5%;
     max-width: 700px;
+  }
+}
+
+@media (max-width: 790px) {
+  .sendNewMessage {
+    width: 95%;
+  }
+}
+
+@media (max-width: 430px) {
+  .sendNewMessage {
+    width: 90%;
+    margin-right: 8px;
   }
 }
