--- a/src/App.css
+++ b/src/App.css
@@ -387,3 +387,17 @@ footer {
     margin-right: 8px;
   }
 }
+.EmojiToggle {
+  Float: right;
+  border: none;
+  margin: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+ .EmojiPicker {
+  position: absolute;
+  bottom: 64px;
+ }
+ 
