--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 .footer__container {
   background-color: #131313;
-  padding: 5rem 0;
+  padding: 1rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,12 +9,12 @@
 
 #footer__logo {
   color: #9e37d1;
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
   cursor: pointer;
   text-decoration: none;
-  font-size: 2rem;
-  margin-left: 24px;
+  font-size: 1.5rem;
+  margin-left: 78px;
 }
 
 .footer__links {
@@ -37,14 +37,14 @@
 }
 
 .footer-open-source h2 {
-  margin-bottom: 16px;
+  margin-bottom: 10px;
   font-size: 26px;
   color: #9e37d1;
 }
 
 .footer-open-source p {
-  margin-bottom: 20px;
-  color: white;
+  margin-bottom: 5px;
+  color: #9e37d1;
 }
 
 .social__icon--link {
@@ -61,6 +61,7 @@
 .social__media {
   max-width: 1000px;
   width: 100%;
+  display: flex;
 }
 
 .social__media--wrap {
@@ -81,7 +82,6 @@
 
 .website__rights {
   color: #fff;
-  margin-left: 25px;
 }
 
 @media screen and (max-width: 820px) {
